# sas_cpp

./: .gitignore  CMakeLists.txt  README.md  main.cpp
src/: AliasTable.cpp  AliasTable.h  CMakeLists.txt  SystematicAliasSampler.h
test/: CMakeLists.txt  sas_test.cpp
